[tool.poetry]
name = "enpypher"
version = "0.1.0"
description = ""
authors = ["Brenden Naumovski <bnaumovski@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
num2words = "^0.5.13"
babel = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
